--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,15 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{mkhitaryan2022fcmpy,
+  title={FCMpy: a python module for constructing and analyzing fuzzy cognitive maps},
+  author={Mkhitaryan, Samvel and Giabbanelli, Philippe and Wozniak, Maciej K and N{\'a}poles, Gonzalo and De Vries, Nanne and Crutzen, Rik},
+  journal={PeerJ Computer Science},
+  volume={8},
+  pages={e1078},
+  year={2022},
+  publisher={PeerJ Inc.}
 }
 
 @article{einstein1950meaning,
