--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,92 @@
 ---
 ---
+@article{wozniak2023towards,
+  abbr={RA-L},
+  title={Towards a Robust Sensor Fusion Step for 3D Object Detection on Corrupted Data},
+  author={Wozniak, Maciej K and K{\aa}refj{\"a}rd, Viktor and Thiel, Marko and Jensfelt, Patric},
+  journal={IEEE Robotics and Automation Letters},
+  year={2023},
+  publisher={IEEE}
+}
 
+@article{mkhitaryan2023use,
+  abbr={BMC},
+  title={How to use machine learning and fuzzy cognitive maps to test hypothetical scenarios in health behavior change interventions: a case study on fruit intake},
+  author={Mkhitaryan, Samvel and Giabbanelli, Philippe J and Wozniak, Maciej K and de Vries, Nanne K and Oenema, Anke and Crutzen, Rik},
+  journal={BMC Public Health},
+  volume={23},
+  number={1},
+  pages={2478},
+  year={2023},
+  publisher={Springer}
+}
+
+@inproceedings{moletta2023virtual,
+  abbr={Humanoids},
+  title={A Virtual Reality Framework for Human-Robot Collaboration in Cloth Folding},
+  author={Moletta, Marco and Wozniak, Maciej K and Welle, Michael C and Kragic, Danica},
+  booktitle={2023 IEEE-RAS International Conference on Humanoid Robots (Humanoids)},
+  year={2023}
+}
+
+@inproceedings{wozniak2023happily,
+  abbr={RO-MAN},
+  title={Happily Error After: Framework Development and User Study for Correcting Robot Perception Errors in Virtual Reality},
+  author={Wozniak, Maciej K and Stower, Rebecca and Jensfelt, Patric and Pereira, Andre},
+  booktitle={IEEE International Symposium on Robot and Human Interactive Communication (RO-MAN)},
+  year={2023}
+}
+
+@inproceedings{wozniak2023applying,
+  abbr={ICARSC},
+  title={Applying 3D Object Detection from Self-Driving Cars to Mobile Robots: A Survey and Experiments},
+  author={Wozniak, Maciej K and K{\aa}refj{\"a}rd, Viktor and Hansson, Mattias and Thiel, Marko and Jensfelt, Patric},
+  booktitle={2023 IEEE International Conference on Autonomous Robot Systems and Competitions (ICARSC)},
+  pages={3--9},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{wozniak2023you,
+  abbr={HRI},
+  title={What you see is (not) what you get: A vr framework for correcting robot errors},
+  author={Wozniak, Maciej K and Stower, Rebecca and Jensfelt, Patric and Pereira, Andre},
+  booktitle={Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction},
+  pages={243--247},
+  year={2023}
+}
+
+@inproceedings{wozniak2023virtual,
+  abbr={HRI},
+  title={Virtual, augmented, and mixed reality for human-robot interaction (vam-hri)},
+  author={Wozniak, Maciej and Chang, Christine T and Luebbers, Matthew B and Ikeda, Bryce and Walker, Michael and Rosen, Eric and Groechel, Thomas Roy},
+  booktitle={Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction},
+  pages={938--940},
+  year={2023}
+}
+
+@inproceedings{khoche2022semantic,
+  abbr={ITSC},
+  title={Semantic 3d grid maps for autonomous driving},
+  author={Khoche, Ajinkya and Wozniak, Maciej K and Duberg, Daniel and Jensfelt, Patric},
+  booktitle={2022 IEEE 25th International Conference on Intelligent Transportation Systems (ITSC)},
+  pages={2681--2688},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{wozniak2022new,
+  abbr={WSC},
+  title={A New Application of Machine Learning: Detecting Errors in Network Simulations},
+  author={Wozniak, Maciej K and Liang, Luke and Phan, Hieu and Giabbanelli, Philippe J},
+  booktitle={2022 Winter Simulation Conference (WSC)},
+  pages={653--664},
+  year={2022},
+  organization={IEEE}
+}
 
 @article{mkhitaryan2022fcmpy,
+  abbr={PeerJ},
   title={FCMpy: a python module for constructing and analyzing fuzzy cognitive maps},
   author={Mkhitaryan, Samvel and Giabbanelli, Philippe and Wozniak, Maciej K and N{\'a}poles, Gonzalo and De Vries, Nanne and Crutzen, Rik},
   journal={PeerJ Computer Science},
@@ -11,6 +95,26 @@
   year={2022},
   publisher={PeerJ Inc.}
 }
+
+@inproceedings{wozniak2022automatic,
+  abbr={ICCS},
+  title={Automatic generation of individual fuzzy cognitive maps from longitudinal data},
+  author={Wozniak, Maciej K and Mkhitaryan, Samvel and Giabbanelli, Philippe J},
+  booktitle={International Conference on Computational Science},
+  pages={312--325},
+  year={2022},
+  organization={Springer}
+}
+
+@inproceedings{wozniak2021comparing,
+  abbr={SIGSIM},
+  title={Comparing implementations of cellular automata as images: A novel approach to verification by combining image processing and machine learning},
+  author={Wozniak, Maciej K and Giabbanelli, Philippe J},
+  booktitle={Proceedings of the 2021 ACM SIGSIM Conference on Principles of Advanced Discrete Simulation},
+  pages={13--25},
+  year={2021}
+}
+
 
 @article{einstein1950meaning,
   abbr={AJP},
