--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,15 @@
 ---
 ---
+# add selected selected={true} to every publication 
+
 @article{wozniak2023towards,
   abbr={RA-L},
   title={Towards a Robust Sensor Fusion Step for 3D Object Detection on Corrupted Data},
   author={Wozniak, Maciej K and K{\aa}refj{\"a}rd, Viktor and Thiel, Marko and Jensfelt, Patric},
   journal={IEEE Robotics and Automation Letters},
   year={2023},
-  publisher={IEEE}
+  publisher={IEEE},
+  selected={true}
 }
 
 @article{mkhitaryan2023use,
@@ -18,7 +21,8 @@
   number={1},
   pages={2478},
   year={2023},
-  publisher={Springer}
+  publisher={Springer},
+  selected={true} 
 }
 
 @inproceedings{moletta2023virtual,
@@ -26,7 +30,8 @@
   title={A Virtual Reality Framework for Human-Robot Collaboration in Cloth Folding},
   author={Moletta, Marco and Wozniak, Maciej K and Welle, Michael C and Kragic, Danica},
   booktitle={2023 IEEE-RAS International Conference on Humanoid Robots (Humanoids)},
-  year={2023}
+  year={2023},
+  selected={true} 
 }
 
 @inproceedings{wozniak2023happily,
@@ -34,7 +39,8 @@
   title={Happily Error After: Framework Development and User Study for Correcting Robot Perception Errors in Virtual Reality},
   author={Wozniak, Maciej K and Stower, Rebecca and Jensfelt, Patric and Pereira, Andre},
   booktitle={IEEE International Symposium on Robot and Human Interactive Communication (RO-MAN)},
-  year={2023}
+  year={2023},
+  selected={true} 
 }
 
 @inproceedings{wozniak2023applying,
@@ -44,7 +50,8 @@
   booktitle={2023 IEEE International Conference on Autonomous Robot Systems and Competitions (ICARSC)},
   pages={3--9},
   year={2023},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true} 
 }
 
 @inproceedings{wozniak2023you,
@@ -53,7 +60,8 @@
   author={Wozniak, Maciej K and Stower, Rebecca and Jensfelt, Patric and Pereira, Andre},
   booktitle={Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction},
   pages={243--247},
-  year={2023}
+  year={2023},
+  selected={true} 
 }
 
 @inproceedings{wozniak2023virtual,
@@ -62,7 +70,8 @@
   author={Wozniak, Maciej and Chang, Christine T and Luebbers, Matthew B and Ikeda, Bryce and Walker, Michael and Rosen, Eric and Groechel, Thomas Roy},
   booktitle={Companion of the 2023 ACM/IEEE International Conference on Human-Robot Interaction},
   pages={938--940},
-  year={2023}
+  year={2023},
+  selected={true} 
 }
 
 @inproceedings{khoche2022semantic,
@@ -72,7 +81,8 @@
   booktitle={2022 IEEE 25th International Conference on Intelligent Transportation Systems (ITSC)},
   pages={2681--2688},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true} 
 }
 
 @inproceedings{wozniak2022new,
@@ -82,7 +92,8 @@
   booktitle={2022 Winter Simulation Conference (WSC)},
   pages={653--664},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true} 
 }
 
 @article{mkhitaryan2022fcmpy,
@@ -93,7 +104,8 @@
   volume={8},
   pages={e1078},
   year={2022},
-  publisher={PeerJ Inc.}
+  publisher={PeerJ Inc.},
+  selected={true} 
 }
 
 @inproceedings{wozniak2022automatic,
@@ -103,7 +115,8 @@
   booktitle={International Conference on Computational Science},
   pages={312--325},
   year={2022},
-  organization={Springer}
+  organization={Springer},
+  selected={true} 
 }
 
 @inproceedings{wozniak2021comparing,
@@ -112,7 +125,8 @@
   author={Wozniak, Maciej K and Giabbanelli, Philippe J},
   booktitle={Proceedings of the 2021 ACM SIGSIM Conference on Principles of Advanced Discrete Simulation},
   pages={13--25},
-  year={2021}
+  year={2021},
+  selected={true} 
 }
 
 
