pubs selected edit

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,5 @@
 ---
 ---
-# add selected selected={true} to every publication 
 
 @article{wozniak2023towards,
   abbr={RA-L},
@@ -21,8 +20,7 @@
   number={1},
   pages={2478},
   year={2023},
-  publisher={Springer},
-  selected={true} 
+  publisher={Springer}
 }
 
 @inproceedings{moletta2023virtual,
@@ -92,8 +90,7 @@
   booktitle={2022 Winter Simulation Conference (WSC)},
   pages={653--664},
   year={2022},
-  organization={IEEE},
-  selected={true} 
+  organization={IEEE}
 }
 
 @article{mkhitaryan2022fcmpy,
@@ -104,8 +101,7 @@
   volume={8},
   pages={e1078},
   year={2022},
-  publisher={PeerJ Inc.},
-  selected={true} 
+  publisher={PeerJ Inc.}
 }
 
 @inproceedings{wozniak2022automatic,
@@ -115,8 +111,7 @@
   booktitle={International Conference on Computational Science},
   pages={312--325},
   year={2022},
-  organization={Springer},
-  selected={true} 
+  organization={Springer}
 }
 
 @inproceedings{wozniak2021comparing,
@@ -125,8 +120,7 @@
   author={Wozniak, Maciej K and Giabbanelli, Philippe J},
   booktitle={Proceedings of the 2021 ACM SIGSIM Conference on Principles of Advanced Discrete Simulation},
   pages={13--25},
-  year={2021},
-  selected={true} 
+  year={2021}
 }
 
 
