--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@article{wozniak2024uada3d,
+  abbr={RA-L},
+  title={Uada3d: Unsupervised adversarial domain adaptation for 3d object detection with sparse lidar and large domain gaps},
+  author={Wozniak, Maciej K and Hansson, Mattias and Thiel, Marko and Jensfelt, Patric},
+  journal={IEEE Robotics and Automation Letters},
+  year={2024},
+  publisher={IEEE}
+}
+
+@inproceedings{nguyen2024mcd,
+  abbr={CVPR},
+  title={Mcd: Diverse large-scale multi-campus dataset for robot perception},
+  author={Nguyen, Thien-Minh and Yuan, Shenghai and Nguyen, Thien Hoang and Yin, Pengyu and Cao, Haozhi and Xie, Lihua and Wozniak, Maciej and Jensfelt, Patric and Thiel, Marko and Ziegenbein, Justin and others},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={22304--22313},
+  year={2024}
+}
+
 @article{wozniak2023towards,
   abbr={RA-L},
   title={Towards a Robust Sensor Fusion Step for 3D Object Detection on Corrupted Data},
