--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,51 @@
 ---
 ---
+
+@article{govindarajan2025cleverdistiller,
+  abbr={CV},
+  title={CleverDistiller: Simple and Spatially Consistent Cross-modal Distillation},
+  author={Govindarajan, Hariprasath and Wozniak, Maciej K and Klingner, Marvin and Maurice, Camille and Kiran, B Ravi and Yogamani, Senthil},
+  journal={arXiv preprint arXiv:2503.09878},
+  year={2025},
+  selected={true}
+}
+
+@inproceedings{stower2025take,
+  abbr={HRI},
+  title={Take a Chance on Me: How Robot Performance and Risk Behaviour Affects Trust and Risk-taking},
+  author={Stower, Rebecca and Gautier, Anna and Wozniak, Maciej and Jensfelt, Patric and Tumova, Jana and Leite, Iolanda},
+  booktitle={Proceedings of the 2025 ACM/IEEE International Conference on Human-Robot Interaction},
+  pages={391--399},
+  year={2025},
+  selected={true}
+}
+
+@inproceedings{stower2025take,
+  abbr={HRI},
+  title={Take a Chance on Me: How Robot Performance and Risk Behaviour Affects Trust and Risk-taking},
+  author={Stower, Rebecca and Gautier, Anna and Wozniak, Maciej and Jensfelt, Patric and Tumova, Jana and Leite, Iolanda},
+  booktitle={Proceedings of the 2025 ACM/IEEE International Conference on Human-Robot Interaction},
+  pages={391--399},
+  year={2025},
+  selected={true}
+}
+
+@article{wozniak2024s3pt,
+  abbr={WACV},
+  title={S3PT: Scene Semantics and Structure Guided Clustering to Boost Self-Supervised Pre-Training for Autonomous Driving},
+  author={Wozniak, Maciej K and Govindarajan, Hariprasath and Klingner, Marvin and Maurice, Camille and Kiran, B Ravi and Yogamani, Senthil},
+  journal={arXiv preprint arXiv:2410.23085},
+  year={2025},
+  selected={true}
+}
 @article{wozniak2024uada3d,
   abbr={RA-L},
   title={Uada3d: Unsupervised adversarial domain adaptation for 3d object detection with sparse lidar and large domain gaps},
   author={Wozniak, Maciej K and Hansson, Mattias and Thiel, Marko and Jensfelt, Patric},
   journal={IEEE Robotics and Automation Letters},
   year={2024},
-  publisher={IEEE}
+  publisher={IEEE},
+  selected={true}
 }
 
 @inproceedings{nguyen2024mcd,
@@ -15,7 +54,8 @@
   author={Nguyen, Thien-Minh and Yuan, Shenghai and Nguyen, Thien Hoang and Yin, Pengyu and Cao, Haozhi and Xie, Lihua and Wozniak, Maciej and Jensfelt, Patric and Thiel, Marko and Ziegenbein, Justin and others},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={22304--22313},
-  year={2024}
+  year={2024},
+  selected={true}
 }
 
 @article{wozniak2023towards,
