--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,8 @@
   author={Govindarajan, Hariprasath and Wozniak, Maciej K and Klingner, Marvin and Maurice, Camille and Kiran, B Ravi and Yogamani, Senthil},
   journal={arXiv preprint arXiv:2503.09878},
   year={2025},
-  selected={true}
+  selected={true},
+  preview={govindarajan2025cleverdistiller.jpg}
 }
 
 @inproceedings{stower2025take,
