--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   journal={arXiv preprint arXiv:2503.09878},
   year={2025},
   selected={true},
-  preview={govindarajan2025cleverdistiller.jpg}
+  preview={govindarajan2025cleverdistiller.png}
 }
 
 @inproceedings{stower2025take,
